--- a/WEB PANEL/index.html
+++ b/WEB PANEL/index.html
@@ -13,7 +13,7 @@
 //EDIT UNDER THIS ONLY
 
 const  firebaseConfig = {
-apiKey: "API KEY",
+apiKey: "AIzaSyB5YJHIgygkIadpaaiqLSliaJ5THyl6FEM",
 authDomain: "AUTH DOMAIN",
 databaseURL: "DATABSE URL",
 projectId: "PROJECT ID",
